force-app/main/default/objects/Purchase_Request__c/fields/Quote_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Cost__c</fullName>
    <formula>Quoted_Created__r.Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total Cost - Not Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>