force-app/main/default/objects/Purchase_Request__c/fields/Quoted_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Cost_Price__c</fullName>
    <description>Cost Price manually entered during the Purchase Request creation. GST not included.</description>
    <inlineHelpText>Cost Price manually entered during the Purchase Request creation. GST not included.</inlineHelpText>
    <label>Quoted Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>