force-app/main/default/objects/Purchase_Request__c/fields/Quoted_Created__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Purchase Requests</relationshipLabel>
    <relationshipName>Purchase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>