force-app/main/default/objects/Purchase_Request__c/fields/Recharge__c.field-meta.xml
<CustomField>
    <fullName>Recharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recharge</label>
    <type>Checkbox</type>
</CustomField>