force-app/main/default/objects/Purchase_Request__c/fields/Recharge_Items_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Recharge_Items_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box once all items have been recharged to the client.</description>
    <label>Recharge Items Invoiced</label>
    <type>Checkbox</type>
</CustomField>