force-app/main/default/objects/Purchase_Request__c/fields/Reset_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Reset_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked, reset the items received to zero.</inlineHelpText>
    <label>Reset Receipt</label>
    <type>Checkbox</type>
</CustomField>