force-app/main/default/objects/Purchase_Request__c/fields/Reviewer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comment__c</fullName>
    <label>Reviewer Comment</label>
    <type>TextArea</type>
</CustomField>