force-app/main/default/objects/Purchase_Request__c/fields/Second_Approver_Limit__c.field-meta.xml
<CustomField>
    <fullName>Second_Approver_Limit__c</fullName>
    <label>Second Approver Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>