force-app/main/default/objects/Purchase_Request__c/fields/Send_Directly_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Send_Directly_To_Order__c</fullName>
    <description>Check the Inventory Item</description>
    <formula>Destination_Store_Item__r.Send_Directly_To_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Directly To Order</label>
    <type>Checkbox</type>
</CustomField>