force-app/main/default/objects/Purchase_Request__c/fields/Send_For_Approval2__c.field-meta.xml
<CustomField>
    <fullName>Send_For_Approval2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send For Approval</label>
    <type>Checkbox</type>
</CustomField>