force-app/main/default/objects/Purchase_Request__c/fields/Send_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Send_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send for Approval</label>
    <type>Checkbox</type>
</CustomField>