force-app/main/default/objects/Purchase_Request__c/fields/Service_PO__c.field-meta.xml
<CustomField>
    <fullName>Service_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PR tagged as Service PO will set directly to Completed once receipted.</description>
    <label>Service PO</label>
    <type>Checkbox</type>
</CustomField>