force-app/main/default/objects/Purchase_Request__c/fields/Source_Store__c.field-meta.xml
<CustomField>
    <fullName>Source_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Store</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Purchase Requests - Source</relationshipLabel>
    <relationshipName>Purchase_Requests_Source</relationshipName>
    <type>Lookup</type>
</CustomField>