force-app/main/default/objects/Purchase_Request__c/fields/Source_Store_Item__c.field-meta.xml
<CustomField>
    <fullName>Source_Store_Item__c</fullName>
    <label>Source Store Item</label>
    <referenceTo>Store_Item__c</referenceTo>
    <relationshipLabel>Purchase Requests (Source Store Item)</relationshipLabel>
    <relationshipName>Purchase_Requests2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>