force-app/main/default/objects/Purchase_Request__c/fields/Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Name__c</fullName>
    <label>Staff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>