force-app/main/default/objects/Purchase_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Purchasing Review</fullName>
            </value>
            <value>
                <fullName>Approver Review</fullName>
            </value>
            <value>
                <fullName>For Approval - Review Complete</fullName>
            </value>
            <value>
                <fullName>For Item Review</fullName>
            </value>
            <value>
                <fullName>For Approval</fullName>
            </value>
            <value>
                <fullName>For Ordering</fullName>
            </value>
            <value>
                <fullName>Pick List</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Approved - For Ordering</fullName>
                <isActive>false</isActive>
                <label>Approved - For Ordering</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Defective</fullName>
                <isActive>false</isActive>
                <label>Defective</label>
            </value>
            <value>
                <fullName>For Item Approval</fullName>
                <isActive>false</isActive>
                <label>For Item Approval</label>
            </value>
            <value>
                <fullName>For Pricing Approval</fullName>
                <isActive>false</isActive>
                <label>For Pricing Approval</label>
            </value>
            <value>
                <fullName>For Quoting</fullName>
                <isActive>false</isActive>
                <label>For Quoting</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <isActive>false</isActive>
                <label>Missing</label>
            </value>
            <value>
                <fullName>Ready for Collection</fullName>
                <isActive>false</isActive>
                <label>Ready for Collection</label>
            </value>
            <value>
                <fullName>Sent to Supplier</fullName>
                <isActive>false</isActive>
                <label>Sent to Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>