force-app/main/default/objects/Purchase_Request__c/fields/Stores_Item__c.field-meta.xml
<CustomField>
    <fullName>Stores_Item__c</fullName>
    <description>Inventory Item Available Check</description>
    <formula>Destination_Store_Item__r.Stock_Available_formula__c   &lt;=  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inventory Item Available Check</inlineHelpText>
    <label>Stores Item</label>
    <type>Checkbox</type>
</CustomField>