force-app/main/default/objects/Purchase_Request__c/fields/Supplier_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Shipping_Address__c</fullName>
    <formula>Supplier__r.ShippingStreet&amp;&quot;, &quot;&amp; Supplier__r.ShippingCity &amp;&quot;, &quot;&amp; Supplier__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Shipping Address</label>
    <type>Text</type>
</CustomField>