force-app/main/default/objects/Purchase_Request__c/fields/Third_Approver__c.field-meta.xml
<CustomField>
    <fullName>Third_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>