force-app/main/default/objects/Purchase_Request__c/fields/Total_Cost_Price_GST_exc__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price_GST_exc__c</fullName>
    <formula>Cost_Price_GST_exc__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PR Cost Price (GST exc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>