force-app/main/default/objects/Purchase_Request__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <description>WO Status</description>
    <formula>text(Work_Order__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>