force-app/main/default/objects/Purchase_Request__c/validationRules/ApproverReview_ValidApprover.validationRule-meta.xml
<ValidationRule>
    <fullName>ApproverReview_ValidApprover</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c)
&amp;&amp;
ISPICKVAL(Status__c, &apos;Approver Review&apos;)
&amp;&amp;
$User.Id !=  First_Approver__c</errorConditionFormula>
    <errorMessage>Only the first approver is allowed to mark this record as Approver Review</errorMessage>
</ValidationRule>