force-app/main/default/objects/Purchase_Request__c/validationRules/Dispute_ReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispute_ReasonRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISCHANGED( Completion_Status__c ),
   ISBLANK( Dispute_Reason__c ),
   OR( ISPICKVAL(Completion_Status__c , &apos;Missing&apos;),
       ISPICKVAL(Completion_Status__c , &apos;Defective&apos;) )
    
)</errorConditionFormula>
    <errorDisplayField>Dispute_Reason__c</errorDisplayField>
    <errorMessage>Dispute reason is required if completion status is Missing or Defective.</errorMessage>
</ValidationRule>