force-app/main/default/objects/Purchase_Request__c/validationRules/ForApproval_NotDraftCancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>ForApproval_NotDraftCancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c ) ,
    ISPICKVAL( Status__c , &apos;Submitted&apos;) ,
    NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;Draft&apos;)),
    NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;Cancelled&apos;))
)</errorConditionFormula>
    <errorMessage>Purchase request cannot be sent for approval.</errorMessage>
</ValidationRule>