force-app/main/default/objects/Purchase_Request__c/validationRules/ForApproval_ValidApproverItemMaster.validationRule-meta.xml
<ValidationRule>
    <fullName>ForApproval_ValidApproverItemMaster</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), &apos;Submitted&apos;)
&amp;&amp;
ISPICKVAL(Status__c, &apos;For Approval&apos;)
&amp;&amp;
$User.Id !=  First_Approver__c
&amp;&amp;
NOT(New_Item_Formula__c)</errorConditionFormula>
    <errorMessage>Only the first approver is allowed to approve/reject this record.</errorMessage>
</ValidationRule>