force-app/main/default/objects/Purchase_Request__c/validationRules/ForApproval_Zero_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>ForApproval_Zero_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status__c , &apos;For Approval&apos;) ,
    Quantity__c = 0
)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity should not zero.</errorMessage>
</ValidationRule>