force-app/main/default/objects/Purchase_Request__c/validationRules/ForItemReview_ValidApprover.validationRule-meta.xml
<ValidationRule>
    <fullName>ForItemReview_ValidApprover</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), &apos;For Approval - Review Complete&apos;)
&amp;&amp;
ISPICKVAL(Status__c, &apos;For Item Review&apos;)
&amp;&amp;
$User.Id !=  First_Approver__c</errorConditionFormula>
    <errorMessage>Only the first approver is allowed to mark this record as For Item Review</errorMessage>
</ValidationRule>