force-app/main/default/objects/Purchase_Request__c/validationRules/ForPackingList_NotPickList.validationRule-meta.xml
<ValidationRule>
    <fullName>ForPackingList_NotPickList</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c ) ,
    ISPICKVAL( Status__c , &apos;Packing List&apos;),
    NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;Pick List&apos;))
)</errorConditionFormula>
    <errorMessage>Only purchase request with status of Pick List can be changed to Packing List.</errorMessage>
</ValidationRule>