force-app/main/default/objects/Purchase_Request__c/validationRules/ForPickList_InvalidStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ForPickList_InvalidStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c ) ,
    ISPICKVAL( Status__c , &apos;Pick List&apos;),
    AND(
          NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;For Approval&apos;)),
          NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;For Item Approval&apos;)),
          NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;For Ordering&apos;))
    )
)</errorConditionFormula>
    <errorMessage>Not allowed to set to Pick List.</errorMessage>
</ValidationRule>