force-app/main/default/objects/Purchase_Request__c/validationRules/ForPricingApproval_withoutCompletedQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>ForPricingApproval_withoutCompletedQuote</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c ),
  ISPICKVAL(Status__c , &apos;For Pricing Approval&apos;) ,
  OR(
    ISBLANK( Quoted_Created__c ),
    NOT(ISPICKVAL( Quoted_Created__r.Status__c , &apos;Done&apos;))
  )
)</errorConditionFormula>
    <errorMessage>Missing or Not Complete quote. Can not proceed with &apos;For Pricing Approval&apos;.</errorMessage>
</ValidationRule>