force-app/main/default/objects/Purchase_Request__c/validationRules/InTransit_MissingManifest.validationRule-meta.xml
<ValidationRule>
    <fullName>InTransit_MissingManifest</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status__c , &apos;In Transit&apos;),
    ISBLANK( Manifest_No__c ) 
)</errorConditionFormula>
    <errorDisplayField>Manifest_No__c</errorDisplayField>
    <errorMessage>Please specify the Manifest Number.</errorMessage>
</ValidationRule>