force-app/main/default/objects/Purchase_Request__c/validationRules/InTransit_NotPackingList.validationRule-meta.xml
<ValidationRule>
    <fullName>InTransit_NotPackingList</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c ) ,
    ISPICKVAL( Status__c , &apos;In Transit&apos;),
    NOT(ISPICKVAL( PRIORVALUE(Status__c), &apos;Packing List&apos;))
)</errorConditionFormula>
    <errorMessage>Only purchase request with status of Packing List can be changed to In Transit.</errorMessage>
</ValidationRule>