force-app/main/default/objects/Purchase_Request__c/validationRules/LockPRCostPricePastReview.validationRule-meta.xml
<ValidationRule>
    <fullName>LockPRCostPricePastReview</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( PR_Cost_Price_GST_exc__c )
&amp;&amp;
NOT(ISPICKVAL(Status__c, &apos;Draft&apos;))
&amp;&amp;
NOT(ISPICKVAL(Status__c, &apos;Submitted&apos;))
&amp;&amp;
NOT(ISPICKVAL(Status__c, &apos;Purchasing Review&apos;))
&amp;&amp;
NOT(ISPICKVAL(Status__c, &apos;Approver Review&apos;))
&amp;&amp;
NOT(
ISPICKVAL(Status__c, &apos;For Ordering&apos;)
&amp;&amp;  (PO_Status__c = &apos;Sent to Supplier&apos; || PO_Status__c = &apos;Partially Fulfilled&apos;)
)</errorConditionFormula>
    <errorDisplayField>PR_Cost_Price_GST_exc__c</errorDisplayField>
    <errorMessage>You are no longer allowed to edit PR Cost Price.</errorMessage>
</ValidationRule>