force-app/main/default/objects/Purchase_Request__c/validationRules/Manifest_NotPackingList.validationRule-meta.xml
<ValidationRule>
    <fullName>Manifest_NotPackingList</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( Manifest_No__c ) ,
    NOT(ISPICKVAL( Status__c , &apos;Packing List&apos;))
)</errorConditionFormula>
    <errorDisplayField>Manifest_No__c</errorDisplayField>
    <errorMessage>Manifest No. can only be entered when the status is Packing List.</errorMessage>
</ValidationRule>