force-app/main/default/objects/Purchase_Request__c/validationRules/Purchase_Request_Existing.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Request_Existing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT( ISBLANK( Destination_Store_Item__r.Active_Auto_Purchase_Request__c ) ),
    Id != Destination_Store_Item__r.Active_Auto_Purchase_Request__c,
    Source_Store__c !=  Destination_Store__c 
)</errorConditionFormula>
    <errorMessage>Can not proceed with the transaction. There is already an in-progress purchase request.</errorMessage>
</ValidationRule>