force-app/main/default/objects/Purchase_Request__c/validationRules/QTYReceived_GreaterThanQTY.validationRule-meta.xml
<ValidationRule>
    <fullName>QTYReceived_GreaterThanQTY</fullName>
    <active>true</active>
    <description>Quantity received is greater than the quantity.</description>
    <errorConditionFormula>AND(
   ISCHANGED( Quantity_Received__c ),
   Quantity_Received__c &gt; Quantity__c
)</errorConditionFormula>
    <errorDisplayField>Quantity_Received__c</errorDisplayField>
    <errorMessage>Quantity received is greater than the quantity.</errorMessage>
</ValidationRule>