force-app/main/default/objects/Purchase_Request__c/validationRules/ResetReceipt_QuantityReceived.validationRule-meta.xml
<ValidationRule>
    <fullName>ResetReceipt_QuantityReceived</fullName>
    <active>true</active>
    <description>Set the Quantity Received to blank and status For Ordering if want to reset the receipt items.</description>
    <errorConditionFormula>AND(
   ISCHANGED( Reset_Receipt__c ),
   Reset_Receipt__c = TRUE, 
   OR(
      NOT(ISBLANK( Quantity_Received__c )),
      NOT( ISPICKVAL( Status__c , &apos;For Ordering&apos;))
   )
)</errorConditionFormula>
    <errorDisplayField>Reset_Receipt__c</errorDisplayField>
    <errorMessage>You can not reset receipt if the Quantity Received has value or the status is not For Ordering.</errorMessage>
</ValidationRule>