force-app/main/default/objects/Purchase_Request__c/validationRules/ReviewComplete_ValidApprover.validationRule-meta.xml
<ValidationRule>
    <fullName>ReviewComplete_ValidApprover</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), &apos;Purchasing Review&apos;)
&amp;&amp;
ISPICKVAL(Status__c, &apos;For Approval - Review Complete&apos;)
&amp;&amp;
NOT($Permission.Purchase_Request_Item_Reviewer)</errorConditionFormula>
    <errorMessage>Only authorised purchasing team members are allowed to mark this record as Review Complete.</errorMessage>
</ValidationRule>