force-app/main/default/objects/Purchase_Request__c/listViews/All_For_Ordering_MI.listView-meta.xml
<ListView>
    <fullName>All_For_Ordering_MI</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Item_Name_Hyperlink__c</columns>
    <columns>Destination_Store__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Asset__c</columns>
    <columns>Supplier__c</columns>
    <columns>Notes__c</columns>
    <columns>Details_for_Supplier__c</columns>
    <columns>Cost_Price_GST_exc__c</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>PO_Status__c</columns>
    <columns>PO_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>For Ordering</value>
    </filters>
    <filters>
        <field>PO_Status__c</field>
        <operation>notContain</operation>
        <value>Canceled,For Approval,PO Approved,Sent to Supplier,Partially Fulfilled,Completed,Draft</value>
    </filters>
    <filters>
        <field>Destination_Store__c</field>
        <operation>equals</operation>
    </filters>
    <label>All For Ordering</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Purchasing</group>
    </sharedTo>
</ListView>