force-app/main/default/objects/Purchase_Request__c/listViews/All_Picking_Packing_In_Transit_MI.listView-meta.xml
<ListView>
    <fullName>All_Picking_Packing_In_Transit_MI</fullName>
    <columns>NAME</columns>
    <columns>Item_Name_Hyperlink__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Asset__c</columns>
    <columns>Quantity__c</columns>
    <columns>Notes__c</columns>
    <columns>Manifest_No__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Sent_for_In_Transit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All | Picking, Packing, In Transit - MI</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Purchasing</group>
    </sharedTo>
</ListView>