force-app/main/default/objects/Purchase_Request__c/listViews/All_Receipting_Aging_1W.listView-meta.xml
<ListView>
    <fullName>All_Receipting_Aging_1W</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>NAME</columns>
    <columns>PO_Number__c</columns>
    <columns>Item_Name_Hyperlink__c</columns>
    <columns>Quantity__c</columns>
    <columns>Quantity_Received__c</columns>
    <columns>Notes__c</columns>
    <columns>Supplier__c</columns>
    <columns>PO_Date__c</columns>
    <columns>PO_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Asset__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Destination_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>For Ordering</value>
    </filters>
    <filters>
        <field>PO_Status__c</field>
        <operation>equals</operation>
        <value>Partially Fulfilled,Sent to Supplier</value>
    </filters>
    <filters>
        <field>PO_Date__c</field>
        <operation>lessThan</operation>
        <value>N_DAYS_AGO:7</value>
    </filters>
    <label>All Receipting - Aging 1W+</label>
</ListView>