force-app/main/default/objects/Purchase_Request__c/listViews/Approval.listView-meta.xml
<ListView>
    <fullName>Approval</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Item_Name_Hyperlink__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Asset__c</columns>
    <columns>Supplier__c</columns>
    <columns>Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Purchase_Request_Approver__c</columns>
    <columns>Cost_Price_GST_exc__c</columns>
    <columns>Total_Cost_Price_GST_exc__c</columns>
    <columns>Notes__c</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>Destination_Store__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>For Approval,For Pricing Approval</value>
    </filters>
    <label>02 All For Approval (inc Price Approval)</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>Purchasing</group>
    </sharedTo>
</ListView>