force-app/main/default/objects/Purchase_Request__c/listViews/Approver_Review.listView-meta.xml
<ListView>
    <fullName>Approver_Review</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Item_Name_Formula__c</columns>
    <columns>Reviewer_Comment__c</columns>
    <columns>Quantity__c</columns>
    <columns>PR_Cost_Price_GST_exc__c</columns>
    <columns>Total_Cost_Price_GST_exc__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Cost_Allocation_Unit__c</columns>
    <columns>Destination_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approver Review</value>
    </filters>
    <label>Purchase Request- Approver Review</label>
</ListView>