force-app/main/default/objects/Purchase_Request__c/listViews/Base_Camp_Moomba_Approval_Required.listView-meta.xml
<ListView>
    <fullName>Base_Camp_Moomba_Approval_Required</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Item_Name_Hyperlink__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Asset__c</columns>
    <columns>Supplier__c</columns>
    <columns>Quantity__c</columns>
    <columns>Cost_Price_GST_exc__c</columns>
    <columns>Total_Cost_Price_GST_exc__c</columns>
    <columns>Notes__c</columns>
    <columns>Destination_Store__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Destination_Store__c</field>
        <operation>equals</operation>
        <value>base camp - moomba</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>For Approval,For Quoting,For Pricing Approval,For Item Approval</value>
    </filters>
    <label>Base Camp - Moomba | Approval Required</label>
</ListView>