force-app/main/default/objects/Purchase_Request__c/listViews/Base_Camp_Moomba_Approved.listView-meta.xml
<ListView>
    <fullName>Base_Camp_Moomba_Approved</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Item_Name_Hyperlink__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Asset__c</columns>
    <columns>Supplier__c</columns>
    <columns>Quantity__c</columns>
    <columns>Cost_Price_GST_exc__c</columns>
    <columns>Total_Cost_Price_GST_exc__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <columns>PO_Link__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Destination_Store__c</field>
        <operation>equals</operation>
        <value>Base Camp - Moomba</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>For Ordering,Pick List,Packing List</value>
    </filters>
    <label>Base Camp - Moomba | Approved</label>
</ListView>